# mcp

./: README.md  pyproject.toml
exp/: .gitignore
server/: client.py  server.py
