[project]
name = "exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.4.2",
    "groq>=0.22.0",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.14",
    "mcp-use>=1.2.5",
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
]
